CXBOX-1344 | Fixed. Improved RichText editor layout and added line wrapping

--- a/ui/src/components/RichText/wysiwyg/components/Editor.module.less
+++ b/ui/src/components/RichText/wysiwyg/components/Editor.module.less
@@ -2,6 +2,7 @@
 :global {
   .tiptap {
     height: 100%;
+    flex: 1 1 auto;
     outline: none;
 
     > * + * {
@@ -128,6 +129,8 @@
     overflow-x: hidden;
     overflow-y: auto;
     padding: 4px 11px;
+    display: flex;
+    flex-direction: column;
     -webkit-overflow-scrolling: touch;
   }
 
